--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
-  "name": "template-react-component-library",
+  "name": "ZahraZare99/template-react-component-library",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/@ZahraZare99"
+  },
   "version": "0.0.1",
   "description": "A simple template for a custom React component library",
   "scripts": {
