--- a/package.json
+++ b/package.json
@@ -1,9 +1,6 @@
 {
-  "name": "ZahraZare99/template-react-component-library",
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/@ZahraZare99"
-  },
-  "version": "0.0.1",
+  "name": "template-react-component-library",
+  "version": "0.0.2",
   "description": "A simple template for a custom React component library",
   "scripts": {
     "rollup": "rollup -c"
@@ -25,5 +22,56 @@
   "files": [
     "dist"
   ],
-  "types": "dist/index.d.ts"
+  "types": "dist/index.d.ts",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/ZahraZare99"
+  },
+  "dependencies": {
+    "balanced-match": "^1.0.2",
+    "brace-expansion": "^1.1.11",
+    "builtin-modules": "^3.2.0",
+    "chalk": "^2.4.2",
+    "color-convert": "^1.9.3",
+    "color-name": "^1.1.3",
+    "commondir": "^1.0.1",
+    "csstype": "^3.0.10",
+    "ansi-styles": "^3.2.1",
+    "concat-map": "^0.0.1",
+    "glob": "^7.2.0",
+    "fs.realpath": "^1.0.0",
+    "has": "^1.0.3",
+    "has-flag": "^3.0.0",
+    "inflight": "^1.0.6",
+    "is-module": "^1.0.0",
+    "function-bind": "^1.1.1",
+    "inherits": "^2.0.4",
+    "is-reference": "^1.2.1",
+    "js-tokens": "^4.0.0",
+    "magic-string": "^0.25.7",
+    "deepmerge": "^4.2.2",
+    "minimatch": "^3.1.2",
+    "once": "^1.4.0",
+    "escape-string-regexp": "^1.0.5",
+    "estree-walker": "^2.0.2",
+    "object-assign": "^4.1.1",
+    "path-is-absolute": "^1.0.1",
+    "path-parse": "^1.0.7",
+    "loose-envify": "^1.4.0",
+    "is-core-module": "^2.8.1",
+    "resolve": "^1.22.0",
+    "wrappy": "^1.0.2",
+    "tslib": "^2.3.1",
+    "sourcemap-codec": "^1.4.8",
+    "supports-preserve-symlinks-flag": "^1.0.0",
+    "picomatch": "^2.3.1",
+    "supports-color": "^5.5.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ZahraZare99/template-react-component-library.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ZahraZare99/template-react-component-library/issues"
+  },
+  "homepage": "https://github.com/ZahraZare99/template-react-component-library#readme"
 }
